--- a/state-space-walkthrough.qmd
+++ b/state-space-walkthrough.qmd
@@ -11,17 +11,15 @@ Welcome to our workshop on how to use the `multinomialTS` package. First things 
 
 ## Introduction
 
-This workshop will take you through how to fit the `multinomialTS` model and interpret the results. The primary goal of this model is to be able to test multiple hypotheses about the data and lend statistical support to the different hypotheses. For example which environmental drivers are having the strongst effects on which taxa? Or, are interactions among taxa or abiotic variables driving change in the system?
+This workshop will take you through how to fit the `multinomialTS` model and interpret the results. One of the primary goal of this model is to be able to test multiple hypotheses about the data and lend statistical support to the different hypotheses. For example which environmental drivers are having the strongst effects on which taxa? Or, are interactions among taxa or abiotic variables driving change in the system? This state-space approach allows us to estimate coefficients for taxa interactions and driver-taxa relationships, that we don't get from methods such as ordination or cluster analysis. We recommend this method as complimentary to other methods, as both have their advantages.
 
-### Multinomial data
+### Multinomial state variables ($Y$)
 
 This model has been designed specifically to work with a multinomially distributed response variable, that is, data from a finite number individuals (e.g., 300 counts) from a sample, from multiple possible classes (e.g., different taxon). We will be using a palaeoecological dataset as an example, where a number of fossil pollen grains are counted (usually 300-400) and identified per slice of sediment. From these data, we know the relative abundance of taxa in the sample, but not the absolute abundance of each species on the landscape. Knowing only the relative abundances creates interdependencies among the taxa as we can only generate estimates $n-1$ taxa. Put simply, if we have 3 species and 60% of the counts belong to species 1, and 30% of the counts belong to species 2, then the remaining 10% must therefore belong to species 3.
 
 ## Data handling
 
-The covariate data can be of mixed types, such as binary events or charcoal accumulation rates.
-
-The data are divided into two, the multinomially distributed ecological state variables (e.g., pollen counts), and the environmental covariates, which may be of mixed types (e.g., binary events or charcoal accumulation rates). Analysing these data with `multinomialTS` can be split into two decision streams (@fig-flow):
+The `multinomialTS` model has been designed to work with multinomially distributed ecological state variables ($Y$), but the covariate predictor data ($X$) can be of mixed types, such as binary events or charcoal accumulation rates. The data are divided into two, the state variables ($Y$, e.g., pollen counts), and the environmental covariates ($X$). Analysing these data with `multinomialTS` can be split into two decision streams (@fig-flow):
 
 1. Handling the state variables $Y$
 2. Handling the covariates $X$
@@ -35,7 +33,7 @@ We will go through an example of how to do this in detail now.
 
 Let's get some data. We are going to use data that are the pollen counts from Story Lake, IN [@schlenker2024], these data will be our state variables $Y$. The data also contain charcoal counts, which will be our environmental covariate $X$. The data are stored in the [Neotoma database](https://apps.neotomadb.org/explorer/).
 
-The following (folded) code block will download the data directly from the Neotoma API, do basic harmonisation of taxa, and some data wrangling to give us a wide dataset of state variables ($Y$) and environmental covariates ($X$). For this session, the data are already wangled and saved to the data directory, so the code block is set not to run `#| eval: false`. We are not going to delve into the details of taxonomic resolution in this workshop, for details on using the `neotoma2` package check out the neotoma [GitHub](https://github.com/NeotomaDB/Current_Workshop/tree/main).
+The following (folded) code block will download the data directly from the Neotoma API, do basic harmonisation of taxa, and some data wrangling to give us a wide dataset of state variables ($Y$) and environmental covariates ($X$). For this session, the data are already wangled and saved to the data directory, so the code block is set not to run (`#| eval: false`). We are not going to delve into the details of taxonomic resolution in this workshop, for details on using the `neotoma2` package check out the neotoma [GitHub](https://github.com/NeotomaDB/Current_Workshop/tree/main).
 
 
 ```{r}
@@ -102,10 +100,10 @@ saveRDS(story_char_wide, "./data/story_char_wide.rds")
 
 ```
 
-Since the folded code block above has already been run, and the data saved to the data directory, we can read in the wrangled data directly. Currently the both the $Y$ and $X$ data contain age and depth columns. These columns will be excluded later but I like to keep some form of common ID column at this stage.
-
+Since the folded code block above has already been run, and the $Y$ and $X$ data saved to the data directory, we can read in the wrangled data directly.
 
 ```{r}
+#| code-fold: false
 # Read-in the wrangled data 
 # Read in our X variables
 story_char_wide <- readRDS("./data/story_char_wide.rds")
@@ -113,9 +111,11 @@ story_char_wide <- readRDS("./data/story_char_wide.rds")
 story_pollen_long <- readRDS("./data/story_pollen_long.rds")
 ```
 
+Currently the both the $Y$ and $X$ data contain age and depth columns. These columns will be excluded later but I like to keep some form of common ID column at this stage.
+
 ## Handling the state variables $Y$
 
- Let's start handling our state variables $Y$. It is not recommended to attempt to estimate coefficients for every species in the data, so we are going to look at key taxa and groups. Let's do some quick and dirty visualisation of the data, by plotting the top five most abundant species by their counts. It can be useful to explore more than the top five species by their counts of course, for example there may be key species ecologically that occur in low abundances. We recommend methods like cluster analyses and topic modelling as preliminary, or complimentary, analyses but we will not cover those methods in this workshop.
+Let's start handling our state variables $Y$. It is not recommended to attempt to estimate coefficients for every species in the data simultaneously, so we are going to look at key taxa and groups. Let's do some quick and dirty visualisation of the data, by plotting the top five most abundant species by their counts. It can be useful to explore more than the top five species by their counts of course, for example, there may be key species of ecological significance that occur in low abundances. We recommend methods like cluster analyses, and topic modelling as preliminary, or complimentary, analyses but we will not cover those methods in this workshop.
 
 ```{r}
 #| code-fold: true
@@ -223,7 +223,7 @@ ggplot(state_variables, aes(x = age, y = value)) +
 ```
 
 
-The data are `r round(max(state_variables$age))` years long, and attempting to predict ecological processes at an annual resolution from observations spaced by hundreds of years will be unreliable. So we need to chose a resolution for our predictions, i.e., we will estimate underlying ecological processes at a 50-year or 100-year temporal resolution. To do so, the data will be binned at a given resolution. The width of the bins is chosen according to the effect that binning will have state variables. Binning will aggregate some data (e.g., if two observations fall within the same bin they will be summed), and we want to keep as many observations as possible in independent bins. We want to interfere with the state variables as little as possible and maximise the number of observations over the time-series. 
+The data are `r round(max(state_variables$age))` years long, and attempting to predict ecological processes at an annual resolution from observations spaced by hundreds of years will be unreliable. So we need to chose a resolution for our predictions, i.e., we will estimate underlying ecological processes at a 50-year or 100-year temporal resolution. To do so, the data will be binned at a chosen resolution. The width of the bins is chosen according to the effect that binning will have state variables. Binning will aggregate some data (e.g., if two observations fall within the same bin they will be summed), and we want to keep as many observations as possible in independent bins. We want to interfere with the state variables as little as possible and maximise the number of observations over the time-series.
 
 A few summary checks can be useful here. We have done some data wrangling in long format, but the model requires wide data. We are going to pivot out data to wide and do some summaries. We are keeping the age and depth columns as identifiers to match with the charcoal data later.
 
@@ -243,33 +243,15 @@ saveRDS(state_variables_wide, "./data/state_variables_wide.rds")
 
 # Time-span of the data divided by the numer of observations
 max(state_variables_wide$age) / nrow(state_variables_wide)
-```
-
-
-```{r}
-#| code-fold: false
 
 # Age differences between successive observations
 diff(state_variables_wide$age)
-```
-
-
-```{r}
-#| code-fold: false
 
 # The range of the age differences
 range(diff(state_variables_wide$age))
-```
-
-```{r}
-#| code-fold: false
 
 # the average of the age differences
 mean(diff(state_variables_wide$age))
-```
-
-```{r}
-#| code-fold: false
 
 # the standard deviation of the age differences
 sd(diff(state_variables_wide$age))
@@ -285,7 +267,6 @@ The model can handle uneven gaps in time, which is great for palaeo-data. But if
 
 :::
 
-
 Now that we know roughly what bin-width to use to maximise the number of observations in the state variables, we will apply the same bin-width to both the state variables and the covariate data.
 
 ## Handling the covariates $X$
@@ -299,7 +280,7 @@ Covariates need to be handled according to decisions that were made around the s
 We can have a finer temporal resolution of the covariates, but we _cannot_ have a finer resolution of the state variables. If your data have a finer resolution of the state variables then it is possible to interpolate the covariate data to match. Interpolating the covariate data....
 :::
 
-Since we need to apply the same binning procedure to both the state variables and the covariate, I like to join both datasets. Charcoal was sampled to a greater depth than the pollen data, so we are going to clip the covariate to the extent of the state variables and join the two datasets by their common variable, age.
+Since we need to apply the same binning procedure to both the state variables and the covariate, I like to join both datasets. Charcoal was sampled to a greater depth than the pollen data, so we are going to clip the covariate to the extent of the state variables and join the two datasets by their common variable; age.
 
 ```{r}
 #| code-fold: false
@@ -311,7 +292,7 @@ story_join <- story_char_wide %>%
   filter(age <= max(state_variables_wide$age)) %>%
   left_join(state_variables_wide)
 
-# Always double check dimentions before/after joining!
+# Always double check dimensions before/after joining!
 # dim(story_join)
 # tail(story_join)
 
@@ -368,25 +349,32 @@ story_binned <- bind_cols(bins = bins, story_join) %>%
 
 ::: {.callout-important}
 ## This is important :100:
-We want the model to run from the past to the present, and the model runs from the top of the matrix to the bottom. So we want to make sure that the top row of the data is the _oldest_ date. Palaeo data are usually ordered from the top of the core to the bottom (present to past), so we `arrange(desc(age))`.
+We want the model to run from the past to the present, and the model runs from the top of the matrix to the bottom. So we want to make sure that the top row of the data is the _oldest_ date. Palaeo-data are usually ordered from the top of the core to the bottom (present to past), so we `arrange(desc(age))`.
 :::
 
-Let's see what the data look like binned at a 50 year resolution:
+Let's see what the data look like binned at a 50-year resolution:
 
 ```{r}
 head(story_binned, n = 10)
 ```
 
-This is looking good, we have reduced the time-intervals over which to run the model. The data are now `r nrow(story_binned)` rows with complete covariate data, containing `r nrow(story_binned[which(rowSums(story_binned[ ,4:7]) != 0), ])` state variable observations. The original number of pollen observations was `r nrow(state_variables_wide)`, so we have not summed many observations within the same bins.
+This is looking good, we have reduced the time-intervals over which to run the model. The data are now `r nrow(story_binned)` rows with complete covariate data, containing `r nrow(story_binned[which(rowSums(story_binned[ ,4:7]) != 0), ])` state variable observations. The original number of pollen observations was `r nrow(state_variables_wide)`, so we have not summed many observations within the same bins. Take care when data-wrangling, see how `NA` in the taxa have been replaced with $0$? We will handle this later, but in the model $0 =$ zero count, which is not the same as no state-variable observations (`NA`) at a given age/depth.
 
 `multinomialTS` requires two matrices, a site-by-species matrix $Y$, and a covariate matrix $X$, so we will leave `tibbles` behind and split the data. $X$ variables may be of different types (e.g., continuous, categorical...) but should be scaled relative to each other.
 
 ```{r}
-story_pollen_matrix <- as.matrix(story_binned[ ,colnames(story_binned) %in% c("other", "hardwood", target_taxa)]) # Select taxa
-head(story_pollen_matrix)
-story_char_matrix <- as.matrix(story_binned[,3], drop = FALSE) # Select Charcoal accumulation
-story_char_matrix_scaled <- scale(story_char_matrix) # Scale X variables
-head(story_char_matrix_scaled)
+story_pollen_matrix <- story_binned %>%  # Select taxa
+  select(other, hardwood, target_taxa) %>% 
+  rename("Fagus" = "Fagus grandifolia") %>% # renaming for to shorten name
+  as.matrix()
+# Replacing 0 with NA is not strictly necessary the way we use the data today
+# But it is a good safety to avoid 0-count data where it zhould be no observation
+story_pollen_matrix[which(rowSums(story_pollen_matrix) == 0), ] <- NA
+
+story_char_matrix_scaled <- story_binned %>% # select covariates
+  select(char_acc) %>% 
+  as.matrix() %>% 
+  scale() # Scale covariates
 ```
 
 ## Fitting `multinomialTS`
@@ -440,13 +428,13 @@ p <- ncol(story_char_matrix_scaled) + 1 # Number of independent variables plus i
 n <- ncol(story_pollen_matrix) # number of taxa
 V.fixed.glmm <- diag(n)
 diag(V.fixed.glmm) <- NA
-V.fixed.glmm[1] <- 1
+V.fixed.glmm[1] <- 1 # reference taxa/group [1, 1] is set to 1
 # V.fixed.glmm <- diag(n)
 # V.fixed.glmm <- matrix(NA, n, n)
-# V.fixed.glmm[1] <- 1 # reference taxa/group [1,1] is set to 1
+# V.fixed.glmm[1] <- 1 # reference taxa/group [1, 1] is set to 1
+
 B.fixed.glmm <- matrix(c(rep(0,p),rep(NA, (n - 1) * p)), p, n) # reference taxa [,1] are set to 0
 B.start.glmm <- matrix(c(rep(0,p),rep(.01, (n - 1) * p)), p, n) # reference taxa [,1] are set to 0
-
 ```
 
 These parameters are used as arguments to the `mnGLMM()` function. Check them out by printing them in your console. Each matrix needs to be the correct dimensions given the number of taxa and number of covariates. The position elements of each matrix reflect the species and/or the covariates, as we will see later in the output of the model.
@@ -458,12 +446,12 @@ Defining the dimensions of each matrix is slightly different between `mnGLMM()` 
 
 #### Fitting `mnGLMM()`
 
-Remember that `mnGLMM()` does not handle gaps in the data and only fits complete $X$ and $Y$ matrices. We have created a variable for out observation indices (`sample_idx`), so for `mnGLMM()` we will index the matrices by this variable: e.g., `story_pollen_matrix[sample_idx, ]`.
+Remember that `mnGLMM()` does not handle gaps in the data and only fits complete $X$ and $Y$ matrices. We have created a variable for our observation indices (`sample_idx`), so for `mnGLMM()` we will index the matrices by this variable: e.g., `story_pollen_matrix[sample_idx, ]`.
 
 ```{r}
 #| code-fold: false
 #| warning: false
-#| eval: false
+#| eval: true
 # fit glmm
 start_time <- Sys.time()
 glmm_mod <- mnGLMM(Y = story_pollen_matrix[sample_idx, ],
@@ -480,12 +468,12 @@ saveRDS(glmm_mod, "./outputs/glmm_mod.rds")
 glmm_mod <- readRDS("./outputs/glmm_mod.rds")
 ```
 
-The outputs of `mnGLMM()` can be examined with the `summary(glmm_mod)` and `coef(glmm_mod)` functions. We are going to skip this for now because the output of `mnGMLL()` is similar to `mnTS()`, only, without the $C$ matrix. For this demonstration we will look at the output of `mnTS()` as the same concepts apply...
+The outputs of `mnGLMM()` can be examined with the `summary(glmm_mod)` and `coef(glmm_mod)` functions. We are going to skip this for now because the output of `mnGMLL()` is similar to `mnTS()`, only, without the $C$ matrix. For this demonstration we will look at the output of `mnTS()` as the same concepts apply.
 
 
 #### Setting-up parameters for `mnTS()`
 
-Now, lets set up the parameters for `mnTS()`. `mTS()` needs:
+Now, we have reasonable starting values from `mnGLMM()` lets set up the main state-space model parameters for `mnTS()`. `mTS()` needs:
 
 - row indices as before: `sample_idx`
 - the number of covariates: `p` 
@@ -504,13 +492,13 @@ Now, lets set up the parameters for `mnTS()`. `mTS()` needs:
 
 We are using the output from `mnGLMM()` as starting values for the matrices $B0$, $B$, and $V$. `mnGLMM()` does not provide estimates for $C$, so we handle $C$ a little differently and we input values close to zero for each parameter estimated and let `mnTS()` do the rest. 
 
-
 ```{r}
 #| code-fold: false
-# B.start etc
-B0.start.mnTS <- glmm_mod$B[1, , drop = F]
-B.start.mnTS <- glmm_mod$B[2, , drop = F]
-
+# B.start
+B0.start.mnTS <- glmm_mod$B[1, , drop = F] # The first row is the Intercept
+B.start.mnTS <- glmm_mod$B[2, , drop = F] # Take care here!
+# The second row on are the covariates, more covariates, more rows. Here is only one covariate
+# B.start.mnTS <- glmm_mod$B[2:3, , drop = F] # For 2 covariates
 sigma.start.mnTS <- glmm_mod$sigma
 
 V.fixed.mnTS = matrix(NA, n, n) # Covariance matrix of environmental variation in process eq
@@ -518,7 +506,6 @@ V.fixed.mnTS[1] = 1
 
 V.start.mnTS = V.fixed.mnTS
 V.start.mnTS <- glmm_mod$V
-# V.start <- diag(diag(V.start))
 
 B.fixed.mnTS <- matrix(NA, p-1, n)
 B.fixed.mnTS[,1] <- 0
@@ -529,8 +516,7 @@ C.start.mnTS = .5 * diag(n)
 C.fixed.mnTS <- C.start.mnTS
 C.fixed.mnTS[C.fixed.mnTS != 0] <- NA
 
-# Set-up C with interactions
-
+# Set-up C with interactions between Fagus and Quercus
 C.start.int.mnTS = .5 * diag(n)
 C.start.int.mnTS[5, 4] <- .001
 C.start.int.mnTS[4, 5] <- .001
@@ -542,7 +528,8 @@ C.fixed.int.mnTS[C.fixed.int.mnTS != 0] <- NA
 #### Fitting `mnTS()`
 
 Remember, `mnTS()` _does_ handle gaps in the state-variables where there are data in the covariate matrix. In the following code, we use the complete (no gaps) $Y$ matrix `story_pollen_matrix[sample_idx, ]` with dimensions: `r dim(story_pollen_matrix[sample_idx, ])`. And the full $X$ matrix: `story_char_matrix_scaled` with dimensions: `r dim(story_char_matrix_scaled)`
-We will fit the model twice: 
+We will fit the model twice:
+
 - without taxa interactions
 - and without taxa interactions. 
 
@@ -561,7 +548,7 @@ mnTS_mod <- mnTS(Y = story_pollen_matrix[sample_idx, ],
                  B.start = B.start.mnTS, B.fixed = B.fixed.mnTS,
                  C.start = C.start.mnTS, C.fixed = C.fixed.mnTS,
                  V.start = V.start.mnTS, V.fixed = V.fixed.mnTS,
-                 dispersion.fixed = 1, maxit.optim = 1e+06)
+                 dispersion.fixed = 1, maxit.optim = 1e+6)
 # maxit.optim is the max number of iterations the optimiser will complete before stopping.
 # increase maxit.optim if the model needs a lot of time to fit.
 end_time <- Sys.time()
@@ -583,11 +570,11 @@ mnTS_mod <- readRDS("./outputs/mnTS_mod.rds")
 start_time <- Sys.time()
 mnTS_mod_int <- mnTS(Y = story_pollen_matrix[sample_idx, ],
                      X = story_char_matrix_scaled, Tsample = sample_idx,
-                     B0.start = B0.start.mnTS, B0.fixed = B0.fixed.mnTS,
-                     B.start = B.start.mnTS, B.fixed = B.fixed.mnTS,
-                     C.start = C.start.int.mnTS, C.fixed = C.fixed.int.mnTS,
+                     B0.start = mnTS_mod$B0, B0.fixed = B0.fixed.mnTS,
+                     B.start = mnTS_mod$B, B.fixed = B.fixed.mnTS,
+                     C.start = mnTS_mod$C, C.fixed = C.fixed.int.mnTS,
                      V.start = mnTS_mod$V, V.fixed = V.fixed.mnTS,
-                     dispersion.fixed = 1, maxit.optim = 1e+06)
+                     dispersion.fixed = 1, maxit.optim = 1e+6)
 end_time <- Sys.time() 
 end_time - start_time
 saveRDS(mnTS_mod_int, "./outputs/mnTS_mod_int.rds")
@@ -602,7 +589,7 @@ mnTS_mod_int <- readRDS("./outputs/mnTS_mod_int.rds")
 
 ::: {.callout-tip}
 ## Getting a good fit
-Getting a good fit can take quite a lof of experimenting with the individual parameters. For the interaction model I'm using $V$ from the no-interaction model `V.start = mnTS_mod$V`.
+Getting a good fit can take quite a lof of experimenting with the individual parameters. For the interaction model I'm using starting conditions from the no-interaction model, e.g., `V.start = mnTS_mod$V`.
 :::
 
 ### Interpreting outputs
@@ -619,15 +606,14 @@ Lift an individual matrix:
 
 ```{r}
 #| code-fold: false
-
 mnTS_mod_int$C
 ```
 
-- columns = abundance
 - rows = change in abundance
-- density dependence on the diagonal
+- columns = abundance
+- Autocorrelation on the diagonal
 
-Quercus-Ulmus 0.028 means that abundance of Quercus affects the change in Betula abundance **(other way around in coef table, Tony?)**
+Quercus-Fagus 0.067 means that _change in abundance_ of _Quercus_ affects the abundance of _Fagus_.
 
 We won't delve into comparing individual coefficient values between the two models here. Doing so is important to interpreting the ecological meaning of the data, and requires strong ecological knowledge of the study system. Although that is one of the most interesting parts, it is a little beyond what we can fit into a workshop around how to fit the model!
 
@@ -635,12 +621,25 @@ We won't delve into comparing individual coefficient values between the two mode
 
 We are aiming to find the best optima possible from the model. Because this may not happen in the first attempt with initial conditions provided by `mnGLMM()`, we can refit the model with starting conditions from the output of `mnTS()`. This may initially sound like cheating, running a circular model, but remember the input values are only starting conditions. Starting with values that are closer to the 'true' optima is likely to provide a better and faster fit.
 
-As an example, let's refit the interaction model:
+As an example, let's refit the first model:
 
 ```{r}
-
+#| code-fold: false
+start_time <- Sys.time()
+mnTS_mod_refit <- mnTS(Y = story_pollen_matrix[sample_idx, ],
+                           X = story_char_matrix_scaled, Tsample = sample_idx,
+                           B0.start = mnTS_mod$B0, B0.fixed = B0.fixed.mnTS,
+                           B.start = mnTS_mod$B, B.fixed = B.fixed.mnTS,
+                           C.start = mnTS_mod$C, C.fixed = C.fixed.mnTS,
+                           V.start = mnTS_mod$V, V.fixed = V.fixed.mnTS,
+                           dispersion.fixed = 1, maxit.optim = 1e+6)
+end_time <- Sys.time() 
+end_time - start_time
+coef(mnTS_mod_refit)
+mnTS_mod_refit$AIC
 ```
 
+Looks like not much changed, so our original fit was good :sunglasses:.
 
 ### Comparing models
 
@@ -648,8 +647,8 @@ The `summary` of the model provides both the log likelihood and the AIC (akaike 
 
 The AIC (and log likelihood) values can be accessed directly with `mnTS_mod_int$AIC`.
 ```{r}
-data.frame(without_interactions = mnTS_mod_int$AIC,
-           with_interactions = mnTS_mod$AIC)
+data.frame(without_interactions = mnTS_mod$AIC,
+           with_interactions = mnTS_mod_int$AIC)
 ```
 
 ### Bootstrapping
@@ -666,16 +665,7 @@ mnTS_mod_boot <- boot.mnTS(mnTS_mod, reps = 10000)
 
 There may be circumstances where coefficients change substantially by fitting the model in alternative ways, e.g., with or without interactions, of different covariates. We can use the post-hoc statistical tests like AIC and likelihood ratio tests to give some statistical support to one model or another. However, in the context of palaeoecological data at least, there is no known correct answer. We can only use the results to lend statistical support to multiple potential hypotheses. Palaeo-data lacks experimental manipulation and direct observation, so we suggest setting up multiple working hypotheses [i.e., @chamberlin1897], testing components of those hypotheses by fitting `multinomialTS` under different conditions, and finally assessing the statistical support lent to each hypotheses within the context of ecological knowledge.
 
-
-## To do
-
-- [ ] attendance list
-- [ ] session hand-out?
-- [ ] feedback?
-- [ ] google doc for session? (my google drive is not working)
-
-
-### References
+## References
 
 ::: {#refs}
 :::
